Fixed overlay bug with correct z-index

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,3 +12,6 @@
     transform: scale(1.25);
 }
 
+.scrollbar::-webkit-scrollbar {
+    display: none;
+} 
